--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "debug": "^3.1.0",
     "ms-rest": "^2.3.3",
     "ms-rest-azure": "^2.5.5",
-    "rhea": "^0.2.12",
+    "rhea": "amqp/rhea#master",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
